Add some mock manifests

--- a/mediamtx/statefulset.yml
+++ b/mediamtx/statefulset.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: mediamtx-deployment
+  name: mediamtx
   namespace: hub
 spec:
   replicas: 3
@@ -17,7 +17,6 @@ spec:
       - name: mediamtx-container
         image: bluenviron/mediamtx:latest-ffmpeg
         ports:
-        - containerPort: 8080
         - containerPort: 8554
         - containerPort: 8089
         - containerPort: 8088
@@ -27,6 +26,10 @@ spec:
           mountPath: /usr/etc/mediamtx.yml
           subPath: mediamtx.yml
           readOnly: true
+      - name: mediamtx-proxy-container
+        image: radito3/mediamtx-proxy:latest
+        ports:
+        - containerPort: 8080
       volumes:
       - name: mediamtx-config
         configMap:
