--- a/mediamtx/statefulset.yml
+++ b/mediamtx/statefulset.yml
@@ -17,10 +17,15 @@ spec:
       - name: mediamtx-container
         image: bluenviron/mediamtx:latest-ffmpeg
         ports:
-        - containerPort: 8554
-        - containerPort: 8089
-        - containerPort: 8088
-        - containerPort: 9774
+        - containerPort: 8000 # RTP/UDP
+        - containerPort: 8001 # RTCP/UDP
+        - containerPort: 8554 # RTSP/TCP
+        - containerPort: 1935 # RTMP
+        - containerPort: 8888 # HLS
+        - containerPort: 8889 # WebRTC
+        # - containerPort: 8089
+        # - containerPort: 8088
+        # - containerPort: 9774
         volumeMounts:
         - name: mediamtx-config
           mountPath: /usr/etc/mediamtx.yml
