Fix networking & update mediamtx manifests

--- a/mediamtx/configmap.yml
+++ b/mediamtx/configmap.yml
@@ -132,6 +132,7 @@ data:
       fallback:
 
       record: no
+      recordPath: /recordings/%path/%Y-%m-%d_%H-%M-%S-%f
 
       overridePublisher: no
       srtPublishPassphrase:
