--- a/mediamtx/rolebinding.yml
+++ b/mediamtx/rolebinding.yml
@@ -1,13 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: deployment-manager-binding
-  namespace: default
+  name: mediamtx-role-binding
 subjects:
 - kind: ServiceAccount
   name: mediamtx-serviceaccount
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
-  name: deployment-manager
+  name: mediamtx-role
   apiGroup: rbac.authorization.k8s.io
