--- a/ui/service.yaml
+++ b/ui/service.yaml
@@ -4,10 +4,9 @@ metadata:
   name: ui-service
   namespace: public
 spec:
+  type: LoadBalancer
   selector:
     app: ui
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 80
-  type: ClusterIP
