--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespaces.yml
-bases:
   - mediamtx/
   - notification-service/
   - ui/
+  - ml-analysis/network-policy.yaml
