--- a/mediamtx/rbac.yml
+++ b/mediamtx/rbac.yml
@@ -3,9 +3,14 @@ kind: ClusterRole
 metadata:
   name: mediamtx-role
 rules:
-# TODO: 
-# - deployments: get, list, create
-# - statefulsets: get, list
-- apiGroups: ["apps"]
-  resources: ["deployments"]
-  verbs: ["create", "get", "list", "watch", "update", "delete"]
+  - apiGroups: ["apps"]
+    resources: ["deployments"]
+    verbs: ["get", "list", "create", "delete"]
+
+  - apiGroups: ["batch"]
+    resources: ["jobs"]
+    verbs: ["get", "list", "create", "delete"]
+
+  - apiGroups: ["apps"]
+    resources: ["statefulsets"]
+    verbs: ["get", "list"]
