--- a/mediamtx/kustomization.yaml
+++ b/mediamtx/kustomization.yaml
@@ -1,10 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - configmap.yml
   - serviceaccount.yml
   - statefulset.yml
   - rolebinding.yml
   - rbac.yml
   - lb-service.yaml
   - headless-service.yaml
+
+configMapGenerator:
+  - name: mediamtx-config
+    namespace: hub
+    options:
+      disableNameSuffixHash: true
+    files:
+      - mediamtx.yml
