--- a/ui/kustomization.yaml
+++ b/ui/kustomization.yaml
@@ -3,3 +3,12 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - service.yaml
+
+secretGenerator:
+  - name: creds-encryption-key
+    namespace: public
+    type: Opaque
+    options:
+      disableNameSuffixHash: true
+    files:
+      - public_key.pem
