--- a/ml-analysis/network-policy.yaml
+++ b/ml-analysis/network-policy.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: restrict-traffic
+  name: restrict-ml-analysis-traffic
   namespace: ml-analysis
 spec:
   podSelector:
