--- a/ui/network-policy.yaml
+++ b/ui/network-policy.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: restrict-traffic
+  name: restrict-web-ui-traffic
   namespace: public
 spec:
   podSelector:
