--- a/mediamtx/mediamtx.yml
+++ b/mediamtx/mediamtx.yml
@@ -74,7 +74,7 @@ authInternalUsers:
   # if the IP is localhost.
 - user: any
   pass:
-  ips: ['127.0.0.1', '::1']
+  ips: ['127.0.0.1', '::1', '10.0.0.0/8']
   permissions:
   - action: api
   - action: metrics
