--- a/mediamtx/kustomization.yaml
+++ b/mediamtx/kustomization.yaml
@@ -7,6 +7,8 @@ resources:
   - rbac.yml
   - lb-service.yaml
   - headless-service.yaml
+  - persistentvolume.yaml
+  - persistentvolumeclaim.yaml
 
 configMapGenerator:
   - name: mediamtx-config
